- refactor capabilities